--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -38,6 +38,13 @@ jobs:
   greet:
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Send greeting
-      run: echo "${{ github.event.inputs.USER_EMAIL }} ${{ github.event.inputs.DURATION }}"
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
