--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -53,8 +53,8 @@ jobs:
     - name: "Test"
       run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)
 
-    - name: "test2"
-      run: echo $PROJECT_NAME
+    - name: 'test2'
+      run: 'echo $PROJECT_NAME'
       #- name: 'Create GCP Project'
       #run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
 
