--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -39,24 +39,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: 'actions/checkout@v1'
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v1'
-
-    - name: 'Use gcloud CLI'
-      run: 'gcloud info'
-
+      #    - id: 'auth'
+      #      uses: 'google-github-actions/auth@v1'
+      #      with:
+      #        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      #
+      #    - name: 'Set up Cloud SDK'
+      #      uses: 'google-github-actions/setup-gcloud@v1'
+      #
+      #    - name: 'Use gcloud CLI'
+      #      run: 'gcloud info'
+      #
     - name: "Test"
       run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)
 
     - name: 'test2'
       run: 'echo $PROJECT_NAME'
-      #- name: 'Create GCP Project'
-      #run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
-
-    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
-      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
+      #
+      #    - name: 'Create GCP Project'
+      #      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
+      #
+      #    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
+      #      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
