--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -51,10 +51,8 @@ jobs:
       #      run: 'gcloud info'
       #
     - name: "Test"
-      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)
+      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  echo ${{ env.PROJECT_NAME }}
 
-    - name: 'test2'
-      run: 'echo ${{ env.PROJECT_NAME }}'
       #
       #    - name: 'Create GCP Project'
       #      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
