--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -39,23 +39,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: 'actions/checkout@v1'
-      #    - id: 'auth'
-      #      uses: 'google-github-actions/auth@v1'
-      #      with:
-      #        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-      #
-      #    - name: 'Set up Cloud SDK'
-      #      uses: 'google-github-actions/setup-gcloud@v1'
-      #
-      #    - name: 'Use gcloud CLI'
-      #      run: 'gcloud info'
-      #
-    - name: "Test"
-      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  echo $PROJECT_NAME
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      #
-      #    - name: 'Create GCP Project'
-      #      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
-      #
-      #    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
-      #      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
+
+
+    - name: 'Create GCP Project'
+      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
+
+    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
+      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
