--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -52,7 +52,7 @@ jobs:
 
 
     - name: 'Create GCP Project'
-      run: PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1) &&  gcloud projects create $PROJECT_NAME --folder=sandbox
+      run: PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox" &&  gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
 
     - name: 'Grant user IAM access by adding to Sandbox-Users Group'
       run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
