--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -51,8 +51,8 @@ jobs:
       run: 'gcloud info'
 
 
-      # - name: 'Create GCP Project'
-      #run: PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" &&  gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+    - name: 'Create GCP Project'
+      run: PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" &&  gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
 
     - name: 'Grant user IAM access by adding to Sandbox-Users Group'
       run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
