--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -39,20 +39,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: 'actions/checkout@v1'
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v1'
-
-    - name: 'Use gcloud CLI'
-      run: 'gcloud info'
-
-
-    - name: 'Create GCP Project'
-      run: PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" &&  gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
-
-    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
-      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
+      #    - id: 'auth'
+      #      uses: 'google-github-actions/auth@v1'
+      #      with:
+      #        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      #
+      #    - name: 'Set up Cloud SDK'
+      #      uses: 'google-github-actions/setup-gcloud@v1'
+      #
+      #    - name: 'Use gcloud CLI'
+      #      run: 'gcloud info'
+      #
+      #
+      #    - name: 'Create GCP Project'
+      #      run: | 
+      #        PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" 
+      #        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+      #
+      #    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
+      #      run: 'gcloud identity groups memberships add --group-email=sandbox-users@cloudpoet.in --member-email=${{ inputs.USER_EMAIL }}'
+      #
+    - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
+      run: |
+        HOUR_DURATION='$(echo "${{ inputs.DURATION  }}" | cur -d' ' -f1)'
+        echo $HOUR_DURATION
+        #gcloud tasks create-http-task testdump1 --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$(date -v+5M -u +"%Y-%m-%dT%H:%M:%SZ") --body-content={"my":"data"}
