--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -61,6 +61,6 @@ jobs:
       #
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
       run: |
-        HOUR_DURATION='$(echo "${{ inputs.DURATION  }}" | cur -d' ' -f1)'
+        HOUR_DURATION="($(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1))"
         echo $HOUR_DURATION
         #gcloud tasks create-http-task testdump1 --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$(date -v+5M -u +"%Y-%m-%dT%H:%M:%SZ") --body-content={"my":"data"}
