--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -63,6 +63,6 @@ jobs:
       run: |
         HOUR_DURATION="$(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1)"
         PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" 
-        PAYLOAD='{"email": "${{ inputs.USER_EMAIL"  }}, "project" : "$PROJECT_NAME"}'
+        PAYLOAD='{"email": "${{ inputs.USER_EMAIL  }}", "project" : "$PROJECT_NAME"}'
         echo $PAYLOAD
         #gcloud tasks create-http-task testdump1 --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$(date -v+5M -u +"%Y-%m-%dT%H:%M:%SZ") --body-content={"my":"data"}
