--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -63,7 +63,7 @@ jobs:
       run: echo "PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL}} | cut -d'@' -f1)-sandbox-project" >> $GITHUB_ENV
     - name: "Create expiry timestamp"
       run: |
-        echo "VALIDITY_HOURS=$(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1)" >> $GITHUB_ENV
+        VALIDITY_HOURS=$(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1)
         echo "DATE_PARAM='-v+${{ env.VALIDITY_HOURS  }}H'" >> $GITHUB_ENV
 
       
