--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -65,10 +65,12 @@ jobs:
       run: echo "HOUR_DURATION=$(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1)" >> $GITHUB_ENV
     - name: "Create expiry timestamp"
       run: echo "DATE_PARAM='-v+${{ env.HOUR_DURATION  }}H'" >> $GITHUB_ENV
+    - name: "Generate expiry timestamp"
+      run: EXPIRES_AT=$(date $DATE_PARAM -u +"%Y-%m-%dT%H:%M:%SZ")
 
       
     - name: test
-      run: echo $PROJECT_NAME && echo $HOUR_DURATION && echo $DATE_PARAM
+      run: echo $PROJECT_NAME && echo $EXPIRES_AT
 
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
       run: |
