--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -66,7 +66,7 @@ jobs:
     - name: "Create expiry timestamp"
       run: echo "DATE_PARAM=v+${{ env.HOUR_DURATION  }}H" >> $GITHUB_ENV
     - name: "Generate expiry timestamp"
-      run: EXPIRES_AT=$(date -${{ env.DATE_PARAM }}H -u +"%Y-%m-%dT%H:%M:%SZ")
+      run: EXPIRES_AT=$(date -${{ env.DATE_PARAM }} -u +"%Y-%m-%dT%H:%M:%SZ")
 
       
     - name: test
