--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -63,16 +63,12 @@ jobs:
       run: date --help
     - name: "Create project name unique per user"
       run: echo "PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL}} | cut -d'@' -f1)-sandbox-project" >> $GITHUB_ENV
-    - name: "Extract numeric duration in hours"
-      run: echo "HOUR_DURATION=$(echo '${{ inputs.DURATION  }}' | cut -d' ' -f1)" >> $GITHUB_ENV
-    - name: "Create expiry timestamp"
-      run: echo "DATE_PARAM=v+${{ env.HOUR_DURATION  }}H" >> $GITHUB_ENV
     - name: "Generate expiry timestamp"
-      run: EXPIRES_AT=$(date -${{ env.DATE_PARAM }} -u +"%Y-%m-%dT%H:%M:%SZ")
+      run: EXPIRES_AT=$(date --date="${{ inputs.DURATION}}" +"%Y-%m-%dT%H:%M:%SZ")
 
       
     - name: test
-      run: echo $PROJECT_NAME && echo $EXPIRES_AT && echo $DATE_PARAM
+      run: echo $PROJECT_NAME && echo $EXPIRES_AT 
 
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
       run: |
