--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -71,4 +71,6 @@ jobs:
       run: |
         PAYLOAD={"email": "${{ inputs.USER_EMAIL  }}", "project" : "${{ env.PROJECT_NAME  }}"}
         echo $PAYLOAD >> $GITHUB_ENV
-        gcloud tasks create-http-task --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$EXPIRES_AT --body-content=$PAYLOAD
+
+    - name: 'Create GCP Task'
+      run: gcloud tasks create-http-task --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$EXPIRES_AT --body-content=$PAYLOAD
