--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -38,19 +38,19 @@ jobs:
   greet:
     runs-on: ubuntu-latest
     steps:
-      #    - uses: 'actions/checkout@v1'
-      #    - id: 'auth'
-      #      uses: 'google-github-actions/auth@v1'
-      #      with:
-      #        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-      #
-      #    - name: 'Set up Cloud SDK'
-      #      uses: 'google-github-actions/setup-gcloud@v1'
-      #
-      #    - name: 'Use gcloud CLI'
-      #      run: 'gcloud info'
-      #
-      #
+    - uses: 'actions/checkout@v1'
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
+
+
       #    - name: 'Create GCP Project'
       #      run: | 
       #        PROJECT_NAME="$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project" 
