--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -67,12 +67,8 @@ jobs:
     - name: test
       run: echo $PROJECT_NAME && echo $EXPIRES_AT 
 
-      #    - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
-      #      run: |
-      #        PAYLOAD={'email': '${{ inputs.USER_EMAIL  }}', 'project' : '${{ env.PROJECT_NAME  }}'}
-      #        echo $PAYLOAD >> $GITHUB_ENV
-      #        echo $PAYLOAD
-
-    - name: 'Create GCP Task'
-      run: "gcloud tasks create-http-task --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$EXPIRES_AT --body-content={'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}"
+    - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
+      run: |
+        PAYLOAD={'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}
+        gcloud tasks create-http-task --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$EXPIRES_AT --body-content=$PAYLOAD
 
