--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -70,5 +70,11 @@ jobs:
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry duration'
       run: |
         PAYLOAD={'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}
-        gcloud tasks create-http-task --queue=sandbox-project-deletion-triggers --url=https://ptsv2.com/t/q1zof-1668273128/post  --location=us-west1 --method=POST --schedule-time=$EXPIRES_AT --body-content=$PAYLOAD
+        gcloud tasks create-http-task \
+          --queue=sandbox-project-deletion-triggers \
+          --url=https://ptsv2.com/t/q1zof-1668273128/post  \
+          --location=us-west1 \
+          --method=POST \
+          --schedule-time=$EXPIRES_AT \
+          --body-content=$PAYLOAD
 
