updated github actions workflow

--- a/.github/config/slack.yaml
+++ b/.github/config/slack.yaml
@@ -46,8 +46,8 @@ footer: >-
   <{{repositoryUrl}}|{{repositoryName}}> {{workflow}} #{{runNumber}}
 
 colors:
-  success: '#5DADE2'
-  failure: '#884EA0'
+  success: '#138717'
+  failure: '#cf133e'
   cancelled: '#A569BD'
   default: '#7D3C98'
 
