--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -54,17 +54,17 @@ jobs:
     - name: "Generate expiry timestamp from the duration from inputs"
       run: echo "EXPIRES_AT=$(date --date='${{ inputs.DURATION  }}' +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
 
-      #    - name: 'Create GCP Project and link it to Billing account'
-      #      run: | 
-      #        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
-      #
-      #    - name: 'Link newly created project to a Billing account'
-      #      run: |
-      #        gcloud components install beta
-      #        gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
-      #
-      #    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
-      #      run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
+    - name: 'Create GCP Project and link it to Billing account'
+      run: | 
+        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+
+    - name: 'Link newly created project to a Billing account'
+      run: |
+        gcloud components install beta
+        gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
+
+    - name: 'Grant user IAM access by adding to Sandbox-Users Group'
+      run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
 
 
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry timestamp'
