--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -49,7 +49,7 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v1'
 
     - name: "Generate a variable for project name unique per user"
-      run: echo "PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-sandbox-project-$(date +%s)" >> $GITHUB_ENV
+      run: echo "PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-$(date +%s)" >> $GITHUB_ENV
 
     - name: "Generate expiry timestamp from the duration from inputs"
       run: echo "EXPIRES_AT=$(date --date='${{ inputs.DURATION  }}' +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
