--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -72,6 +72,7 @@ jobs:
       run: |
         PAYLOAD={'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}
         gcloud tasks create-http-task \
+          --header:"authorization: Bearer ${{secrets.GITHUB_ACCESS_TOKEN}}"
           --queue=sandbox-project-deletion-triggers \
           --url=${{ secrets.SCHEDULER_URL }} \
           --location=us-west1 \
