updated github actions workflow

--- a/.github/workflows/gcp_nuke.yaml
+++ b/.github/workflows/gcp_nuke.yaml
@@ -9,4 +9,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: dispatch trigger
       run: |
-        echo "${{ github.event.client_payload.foo }}"
+        echo "${{ github.event.client_payload.project_name }}"
