--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -54,25 +54,24 @@ jobs:
     - name: "Generate expiry timestamp from the duration from inputs"
       run: echo "EXPIRES_AT=$(date --date='${{ inputs.DURATION  }}' +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
 
-    - name: 'Create GCP Project and link it to Billing account'
-      run: | 
-        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+      #    - name: 'Create GCP Project and link it to Billing account'
+      #      run: | 
+      #        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+      #
+      #    - name: 'Link newly created project to a Billing account'
+      #      run: |
+      #        gcloud components install beta
+      #        gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
+      #
+      #    - name: 'Grant user IAM access to newly created project'
+      #      #run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
+      #      run: gcloud projects add-iam-policy-binding $PROJECT_NAME --member='user:${{inputs.USER_EMAIL}}' --role='roles/editor'
+      #
 
-    - name: 'Link newly created project to a Billing account'
-      run: |
-        gcloud components install beta
-        gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
-
-    - name: 'Grant user IAM access to newly created project'
-      #run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
-      run: gcloud projects add-iam-policy-binding $PROJECT_NAME --member='user:${{inputs.USER_EMAIL}}' --role='roles/editor'
-
-
-'{"event_type": "hello","client_payload": {"project_name": "$PROJECT_NAME"}}'
 
     - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry timestamp'
       run: |
-        PAYLOAD= {'event_type':'gcp_nuke','client_payload':{'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}}
+        PAYLOAD={'event_type':'gcp_nuke','client_payload':{'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}}
         gcloud tasks create-http-task \
           --header="authorization:Bearer ${{secrets.GITHUB_ACCESS_TOKEN}}"
           --queue=sandbox-project-deletion-triggers \
