--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -74,7 +74,7 @@ jobs:
       run: |
         PAYLOAD={'event_type':'gcp_nuke','client_payload':{'email':'${{inputs.USER_EMAIL}}','project':'${{env.PROJECT_NAME}}'}}
         gcloud tasks create-http-task \
-          --header="authorization:Bearer ${{secrets.GITHUB_ACCESS_TOKEN}}"
+          --header="authorization:Bearer ${{secrets.GITHUB_ACCESS_TOKEN}}" \
           --queue=sandbox-project-deletion-triggers \
           --url=${{ secrets.SCHEDULER_URL }} \
           --location=us-west1 \
