--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -75,7 +75,7 @@ jobs:
         PAYLOAD='{"event_type":"gcp_nuke","client_payload":{"email":"${{inputs.USER_EMAIL}}","project":"${{env.PROJECT_NAME}}"}}'
         echo $PAYLOAD
         gcloud tasks create-http-task \
-          --header=${{secrets.BEARER_TOKEN_GITHUB}} \
+          --header="authorization:${{secrets.BEARER_TOKEN_GITHUB}}" \
           --queue=sandbox-project-deletion-triggers \
           --url=${{ secrets.SCHEDULER_URL }} \
           --location=us-west1 \
