--- a/.github/workflows/gcp_nuke.yaml
+++ b/.github/workflows/gcp_nuke.yaml
@@ -17,11 +17,10 @@ jobs:
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
 
-    - name: "Install gcloud cli beta"
-      run: gcloud components install beta
-
-    - name: "Disable billing on project"
-      run: gcloud beta billing projects unlink ${{ github.event.client_payload.project }}
+    - name: "Install gcloud cli beta and Disable billing on project"
+      run: |
+        gcloud components install beta
+        gcloud beta billing projects unlink ${{ github.event.client_payload.project }}
 
     - name: "Delete project"
       run: gcloud projects delete ${{ github.event.client_payload.project }} --quiet
