--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -44,8 +44,9 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
+        workload_identity_provider:  ${{ secrets.WIF_IDP_POOL }}
+        service_account: ${{ secrets.RUNNER_SERVICE_ACCOUNT }}
+        
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
 
