--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -55,38 +55,41 @@ jobs:
 
     - name: "Generate expiry timestamp from the duration from inputs"
       run: echo "EXPIRES_AT=$(date --date='${{ inputs.DURATION  }}' +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
+    
+    - name: "test auth"
+      run: gcloud auth list
+      
+    # - name: 'Create GCP Project and link it to Billing account'
+    #   run: | 
+    #     gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
 
-    - name: 'Create GCP Project and link it to Billing account'
-      run: | 
-        gcloud projects create $PROJECT_NAME --folder=${{ secrets.FOLDER_ID }}
+    # - name: 'Link newly created project to a Billing account'
+    #   run: |
+    #     gcloud components install beta
+    #     gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
 
-    - name: 'Link newly created project to a Billing account'
-      run: |
-        gcloud components install beta
-        gcloud beta billing projects link $PROJECT_NAME --billing-account ${{ secrets.BILLING_ACCOUNT_ID }} 
-
-    - name: 'Grant user IAM access to newly created project'
-      #run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
-      run: gcloud projects add-iam-policy-binding $PROJECT_NAME --member='user:${{inputs.USER_EMAIL}}' --role='roles/editor'
+    # - name: 'Grant user IAM access to newly created project'
+    #   #run: gcloud identity groups memberships add --group-email=${{secrets.SANDBOX_GROUP_EMAIL}} --member-email=${{inputs.USER_EMAIL}}
+    #   run: gcloud projects add-iam-policy-binding $PROJECT_NAME --member='user:${{inputs.USER_EMAIL}}' --role='roles/editor'
 
 
 
-    - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry timestamp'
-      run: |
-        PAYLOAD='{"event_type":"gcp_nuke","client_payload":{"email":"${{inputs.USER_EMAIL}}","project":"${{env.PROJECT_NAME}}"}}'
-        echo $PAYLOAD
-        gcloud tasks create-http-task \
-          --header="authorization:${{secrets.BEARER_TOKEN_GITHUB}}" \
-          --queue=sandbox-project-deletion-triggers \
-          --url=${{ secrets.SCHEDULER_URL }} \
-          --location=us-west1 \
-          --method=POST \
-          --schedule-time=$EXPIRES_AT \
-          --body-content=$PAYLOAD
+    # - name: 'Create cleanup and deletion task on GCP Cloud Tasks scheduled exactly at expiry timestamp'
+    #   run: |
+    #     PAYLOAD='{"event_type":"gcp_nuke","client_payload":{"email":"${{inputs.USER_EMAIL}}","project":"${{env.PROJECT_NAME}}"}}'
+    #     echo $PAYLOAD
+    #     gcloud tasks create-http-task \
+    #       --header="authorization:${{secrets.BEARER_TOKEN_GITHUB}}" \
+    #       --queue=sandbox-project-deletion-triggers \
+    #       --url=${{ secrets.SCHEDULER_URL }} \
+    #       --location=us-west1 \
+    #       --method=POST \
+    #       --schedule-time=$EXPIRES_AT \
+    #       --body-content=$PAYLOAD
 
-    - name: 'Alert on Slack about project creation status'
-      uses: act10ns/slack@v1
-      with:
-        status: ${{ job.status }}
-        config: .github/config/slack.yaml
-      if: always()
+    # - name: 'Alert on Slack about project creation status'
+    #   uses: act10ns/slack@v1
+    #   with:
+    #     status: ${{ job.status }}
+    #     config: .github/config/slack.yaml
+    #   if: always()
