--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -42,10 +42,11 @@ jobs:
     steps:
     - uses: 'actions/checkout@v1'
     - id: 'auth'
-      uses: 'google-github-actions/auth@v1'
+      uses: 'google-github-actions/auth@v2'
       with:
         workload_identity_provider:  ${{ secrets.WIF_IDP_POOL }}
-        service_account: ${{ secrets.RUNNER_SERVICE_ACCOUNT }}
+        # service_account: ${{ secrets.RUNNER_SERVICE_ACCOUNT }}
+        project_id: ${{ secrets.SANDBOX_MASTER_PROJECT }}
         
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
