--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -71,8 +71,8 @@ jobs:
         json: '{"request_duration":"${{ inputs.DURATION  }}","event_type":"sandbox-provision"}'
         dir: "/"
 
-    - name: "test auth"
-      run: gcloud functions call gcp-sandbox-manager --data "$(cat ./payload.json)" --region asia-south1 --project "sandbox-master-pr"
+    - name: "Invoke gcloud function"
+      run: gcloud functions call gcp-sandbox-manager --data "$(cat ./payload.json)" --region asia-south1 --project "sandbox-master-prj"
     # - name: 'Alert on Slack about project creation status'
     #   uses: act10ns/slack@v1
     #   with:
