--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -55,12 +55,6 @@ jobs:
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
 
-    - name: "Generate a variable for project name unique per user"
-      run: echo "PROJECT_NAME=$(echo ${{ inputs.USER_EMAIL  }} | cut -d'@' -f1)-$(date +%s)" >> $GITHUB_ENV
-
-    - name: "Generate expiry timestamp from the duration from inputs"
-      run: echo "EXPIRES_AT=$(date --date='${{ inputs.DURATION  }}' +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
-    
     - name: "test auth"
       run: gcloud auth list
 
@@ -68,7 +62,7 @@ jobs:
       run: gcloud projects list
 
     - name: "Invoke gcloud function"
-      run: gcloud functions call gcp-sandbox-manager --data '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}' --region asia-south1 --project ${{ secrets.SANDBOX_MASTER_PROJECT_ID }}
+      run: gcloud functions call gcp-sandbox-manager --data '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}' --region asia-south1 --project sandbox-master-prjc
       
     # - name: 'Alert on Slack about project creation status'
     #   uses: act10ns/slack@v1
