--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -73,10 +73,14 @@ jobs:
     #     bearerToken: '$(gcloud auth print-identity-token)'
     #     data: '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}'
 
-    - name: "Curl Invoke"
-      run: curl -m 70 -X POST https://asia-south1-sandbox-master-prjc.cloudfunctions.net/gcp-sandbox-manager \
-      -H "Authorization: bearer $(gcloud auth print-identity-token)" \
-      -H "Content-Type: application/json" -d '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}'
+    - name: "Call API"
+      uses: indiesdev/curl@v1.1
+      with:
+        url: https://asia-south1-sandbox-master-prjc.cloudfunctions.net/gcp-sandbox-manager
+        method: "POST"
+        headers: '{"Content-Type":"application/json"}'
+        body: '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}'
+        bearer-token: $(gcloud auth print-identity-token)
 
     # - name: "Invoke gcloud function"
     #   run: gcloud functions call gcp-sandbox-manager --data '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}' --region asia-south1 --project sandbox-master-prjc
