--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -64,6 +64,10 @@ jobs:
     - name: "test prj sa"
       run: gcloud functions list --project sandbox-master-prjc
 
+    - name: "fetch oauth token"
+      run: echo "OAUTH_TOKEN=$(gcloud auth print-identity-token)" >> $GITHUB_ENV
+
+
     # - name: Invoke function over HTTP
     #   uses: fjogeleit/http-request-action@v1
     #   with:
@@ -80,7 +84,7 @@ jobs:
         method: "POST"
         headers: '{"Content-Type":"application/json"}'
         body: '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}'
-        bearer-token: $(gcloud auth print-identity-token)
+        bearer-token: ${{ env.EMAIL_DOMAIN }}
 
     # - name: "Invoke gcloud function"
     #   run: gcloud functions call gcp-sandbox-manager --data '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}' --region asia-south1 --project sandbox-master-prjc
